# mini-aios

./: .gitignore  agent.py  cli.py  crons.py  dream.py  main.py  pyproject.toml  server.py  tools.py
aios-desktop/: README.md  electron-builder.yml  package.json
aios-desktop/dist-electron/: main.js
aios-desktop/electron/: main.ts
aios-desktop/src/: App.tsx
aios-desktop/src/components/: Window.tsx
aios-desktop/src/main/: index.ts
aios-desktop/src/preload/: index.d.ts  index.ts
aios-desktop/src/renderer/: index.html
aios-desktop/src/renderer/src/: App.tsx
aios-desktop/src/renderer/src/assets/: main.css
aios-desktop/src/renderer/src/components/: HoverClickableWrapper.tsx
aios-desktop/src/renderer/src/services/: websocketManager.ts
aios-desktop/src/renderer/src/stores/: useAppStore.ts
aios-desktop/src/renderer/src/windows/components/: AnswerPanel.tsx  TextInput.tsx
aios_core/: __init__.py  agent.py  crons.py  dream.py  heartbeat.py  initialize.py  prompt_loader.py  sessions.py  tools.py  workspace.py
aios_core/prompts/: agent.md  cron.md  dream.md  heartbeat.md  subagent.md
aios_core/tools/: __init__.py  codex.py  cron.py  filesystem.py  processes.py  search.py  shell.py  subagent.py  tavily.py
data/: nvda_quote_2026-03-17_163910.csv
reports/: nvda_shareholder_report.md
scripts/: fetch_nvda_price.sh
server/: server.py
server/types/: __init__.py  chat.py  run.py  ws.py
server/utils/: utils.py
server/ws/: __init__.py  connection.py  manager.py  router.py
tests/: test_processes.py
(+1 files in other folders)
