[project]
name = "mini-aios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.9",
    "anthropic>=0.52.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]
